force "fix protect" for kn, remove it from API
