# backend/api/types/group.go
@@ -9,19 +9,17 @@ type GroupsRes struct {
 }
 
 type GroupReq struct {
-	ID         *ID    `json:"id" example:"0a1b2c3d" swaggertype:"string"`
-	Name       string `json:"name" example:"Routing"`
-	Color      string `json:"color" example:"#ffffff"`
-	Interface  string `json:"interface" example:"nwg0"`
-	FixProtect bool   `json:"fixProtect" example:"false"`
+	ID        *ID    `json:"id" example:"0a1b2c3d" swaggertype:"string"`
+	Name      string `json:"name" example:"Routing"`
+	Color     string `json:"color" example:"#ffffff"`
+	Interface string `json:"interface" example:"nwg0"`
 	RulesReq
 }
 
 type GroupRes struct {
-	ID         ID     `json:"id" example:"0a1b2c3d" swaggertype:"string"`
-	Name       string `json:"name" example:"Routing"`
-	Color      string `json:"color" example:"#ffffff"`
-	Interface  string `json:"interface" example:"nwg0"`
-	FixProtect bool   `json:"fixProtect" example:"false"`
+	ID        ID     `json:"id" example:"0a1b2c3d" swaggertype:"string"`
+	Name      string `json:"name" example:"Routing"`
+	Color     string `json:"color" example:"#ffffff"`
+	Interface string `json:"interface" example:"nwg0"`
 	RulesRes
 }
